--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.5",
+    "@cypress/xpath": "^2.0.3",
     "@shelex/cypress-allure-plugin": "^2.34.0",
     "cypress": "^12.0.2",
     "esbuild": "^0.16.4",
     "multiple-cucumber-html-reporter": "^3.0.1"
+  },
+  "dependencies": {
+    "base-64": "^1.0.0"
   }
 }
